Bug fix for slight flicker when icon height changes

--- a/src/App.scss
+++ b/src/App.scss
@@ -77,9 +77,9 @@
   .icon {
     max-width: 60px;
     max-height: 60px;
-    object-fit: contain;
+    height: 100vh;
     width: 100%;
-    height: 100%;
+    object-fit: contain;
     vertical-align: middle;
   }
   .error{
